# StreamLinkWear

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  PRIVACY_POLICY.md  PROTOCOL.md  README.md  build.gradle  build_debug_scope.txt  build_final.txt  build_final_v2.txt  build_final_v3.txt  build_final_v4.txt  build_minsdk_fix.txt  build_orchestrator_fix.txt  build_phase_b.txt  build_production_v1.txt  build_release_v2.txt  build_task1_1.txt  build_task1_2.txt  build_task2_1.txt  build_task2_2.txt  build_task3_1.txt  build_task3_2.txt  build_task4.txt  build_task5.txt  build_wear_fix.txt  crash_log.txt  docker-compose.yml  extract.txt  extracted_code.md  gradle.properties  gradle_deprecation_report.txt  gradle_deprecation_summary.txt  ksp_error.txt  ksp_stacktrace.txt  nginx.conf  resize_icon.py  secrets.properties.example  settings.gradle  (+1 more)
.github/workflows/: ci.yml
ai_scripts/: export_model.py
ai_training/: export_from_room.py  train_stream_predictor.py
app/: build.gradle  google-services(1).json  google-services.json  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  stream_engine.cpp
backend/: .env.example  Dockerfile  build.gradle  chaos_stream_proxy.py  requirements.txt  run_chaos_assessment.py  train_stream_predictor.py
dashboard/: index.html
gradle/wrapper/: gradle-wrapper.properties
scripts/: generate_release_keystore.ps1  local_soak_chaos.ps1  soak_test.ps1
shared/: build.gradle
testsprite_tests/tmp/: code_summary.yaml
wear/: AGENT_TASK.md  build.gradle  google-services.json  proguard-rules.pro
(+264 files in other folders)
